Fixed display of login button on small screen

--- a/www/css/header.css
+++ b/www/css/header.css
@@ -7,7 +7,6 @@
     top: 0;
     z-index: 3;
     box-shadow: 0px 2px 2px #1d1d1d;
-    min-width: 320px;
     background: #282828;
 }
 
@@ -22,6 +21,7 @@
 #user-menu{
     padding-left: 0;
     padding-right: 0;
+    margin-right:0;
 }
 
 #main-nav .navbar-brand{
